# CUDA_Freshman

./: CMakeLists.txt
0_hello_world/: hello_world.cu
1_check_dimension/: check_dimension.cu
2_grid_block/: grid_block.cu
3_sum_arrays/: CMakeLists.txt  sum_arrays.cu
include/: freshman.h  timer.cc  timer.h
